# MLE-TRAINING

./: .gitignore  preprocessor.pkl  pyproject.toml
app/: api.py  frontend.py
docs/mlruns/0/: meta.yaml
docs/mlruns/460934371083443336/: meta.yaml
docs/source/: api_reference.rst  conf.py  data_imbalance.rst  index.rst  weighted_f1.rst
notebooks/: 01_eda.ipynb  02_model_dev.ipynb
project/: pyproject.toml
src/: data_prep.py  predict.py  train.py
tests/: test_data_prep.py  test_inference.py  test_integration.py
