[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sphinx>=8.1.3",
    "uvicorn>=0.38.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

